MyWorkPractise/Services/nginx_clusterip_service_v1.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-clusterip 
spec: #not specified type of the service is clusterIP
 selector:
  app: my-nginx
 ports:
 - name: http
   port: 8080
   targetPort: 80
