MyWorkPractise/Services/nginx_loadbalancer_service.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-loadbalance
spec:
 type: LoadBalancer
 selector:
  app: my-nginx
 ports:
  - name: "80"
    port: 80
    targetPort: 80
