MyWorkPractise/Services/nginx_nodeport_service_v1.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-nodeportservice 
spec:
 type: NodePort
 selector:  
   app: my-nginx
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30100 #this is optional as it defults from 30000-32767 but if we want to specify explicitly
