MyWorkPractise/Services/ngnix_externalname_service.yml
apiVersion:
kind: Service
metadata:
 name: external-service
selector:
 type: ExternalName
 externalName: api.myexperiments.com
 ports:
  port: 9000
