MyWorkPractise/Services/ingress_v1.yml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
 name: simple-fanout-example 
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
 rules:
 - http:
    paths:
    - path: /nginx 
      backend: 
      serviceName: nginx 
      servicePort: 80
